# anki-card-game

./: .gitignore  CMakeLists.txt
cards/: CMakeLists.txt
cards/assets/: LICENSE.md
cards/include/: Card.h  CardInfo.h  ModelsRegistry.h  ResourceManager.h  utils.h
cards/include/components/: BaseButtonComponent.h  Component.h  SceneComponent.h  TextComponent.h
cards/include/controllers/: CardsMatchController.h
cards/include/models/: CardModel.h
cards/include/transport/: Transport.h
cards/source/: Card.cpp  ModelsRegistry.cpp  ResourceManager.cpp  main.cpp  utils.cpp
cards/source/components/: BaseButtonComponent.cpp  TextComponent.cpp
cards/source/controllers/: CardsMatchController.cpp
cards/source/models/: CardModel.cpp
cards/source/transport/: Transport.cpp
cmake/: tools.cmake
